// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalt 
    0.00
  </h1>
</div>
`;

exports[`should correctly render ExpenseSummary with 1 expense 2`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalt 
    0.00
  </h1>
</div>
`;
